--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -7,6 +7,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout
+              uses: actions/checkout@v6.0.2
+              
             - name: list files
               run: ls -ltra
 
