--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -9,9 +9,12 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v6.0.2
-              
+
             - name: list files
               run: ls -ltra
+  
 
             - name: run shell script
-              run: ./script.sh         
+              run: 
+                chmod +x script.sh 
+                ./script.sh         
