--- a/.github/workflows/dockerLogin.yaml
+++ b/.github/workflows/dockerLogin.yaml
@@ -1,4 +1,4 @@
-name: docker login
+name: Build and Push Docker Image
 
 on:
   push:
@@ -6,15 +6,23 @@ on:
       - main
 
 jobs:
-  login:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Verify login
-        run: docker info
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-app:latest .
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-app:latest
